--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: automerge
-        uses: "pascalgn/automerge-action@135f0bdb927d9807b5446f7ca9ecc2c51de03c4a"
+        uses: "JamesMarkWilton/auto_merge_my_pull_requests@development"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
