--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,4 +1,4 @@
-name: github
+name: Labeler
 
 on:
   pull_request:
@@ -6,20 +6,11 @@ on:
       - master
 
 jobs:
-  labeler:
+  label_prs:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v1
-      -
-        name: Run Labeler
-        if: success()
-        uses: crazy-max/ghaction-github-labeler@v1
-        with:
-          yaml_file: .github/labels.yml
-          exclude: "['help*', '*issue']"
-          skip_delete: false
-          dry_run: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Label PRs
+      if: github.event.action == 'opened' # Only run the action when the PR was first opened
+      uses: ffittschen/pr-branch-labeler@v1
+      with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
