--- a/.github/workflows/pr-branch-labeler.yml
+++ b/.github/workflows/pr-branch-labeler.yml
@@ -1,16 +1,17 @@
-name: Labeler
+name: PR-Branch-Labeler
 
 on:
   pull_request:
     branches:
-      - translations_delivery
+      - smartling-translations-delivery
+      - translations/*
 
 jobs:
   label_prs:
     runs-on: ubuntu-latest
     steps:
     - name: Label PRs
-      if: github.event.action == 'opened' # Only run the action when the PR was first opened
+      if: github.event.action == 'opened'
       uses: ffittschen/pr-branch-labeler@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
