--- a/.github/workflows/pr-branch-labeler.yml
+++ b/.github/workflows/pr-branch-labeler.yml
@@ -1,4 +1,4 @@
-name: Labeler
+name: PR-Branch-Labeler
 
 on:
   pull_request:
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Label PRs
-      if: github.event.action == 'opened' # Only run the action when the PR was first opened
+      if: github.event.action == 'opened'
       uses: ffittschen/pr-branch-labeler@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
